step-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-listener
spec:
  ingressClassName: package-nginx
  rules:
    - host: hugolo-github-listener.package.playground.padok.cloud
      http:
        paths:
          - pathType: Exact
            path: "/hooks"
            backend:
              service:
                name: el-github-listener
                port:
                  number: 8080
